update the deps